# perlin_trick

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  local_state.rs
